# velo-proggraming-language

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  setup_and_build.bat
extensions/vegame/: CMakeLists.txt  cmake_install.cmake  vegame.cpp
src/: interpreter.hpp  lexer.hpp  main.cpp  parser.hpp  value.hpp  vegame.cpp  velo_api.hpp
